.devcontainer/k8s/sera-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sera-pod
  labels:
    app: sera-app
spec:
  volumes:
    - name: node-modules
      persistentVolumeClaim:
        claimName: sera-node-modules-pvc
    - name: sera-models
      persistentVolumeClaim:
        claimName: sera-models-pvc
    - name: mongo-init-scripts
      configMap:
        name: sera-mongo-init-scripts
        items:
          - key: entrypoint.sh
            path: entrypoint.sh
    - name: mongodb-data
      persistentVolumeClaim:
        claimName: mongodb-pvc
  containers:
  - name: sera-backend-builder
    image: backend_builder:latest
    volumeMounts:
      - mountPath: /workspace/node_modules
        name: node-modules
      - mountPath: /workspace/src/models
        name: sera-models
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-c"]
    args: ["npm start"]
    ports:
    - containerPort: 12030
  - name: sera-backend-socket
    image: backend_socket:latest
    volumeMounts:
      - mountPath: /workspace/node_modules
        name: node-modules
      - mountPath: /workspace/src/models
        name: sera-models
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-c"]
    args: ["npm start"]
    ports:
    - containerPort: 12040
  - name: sera-mongodb
    image: mongo:latest
    ports:
      - containerPort: 27017
    volumeMounts:
      - name: mongodb-data
        mountPath: /data/db
    command: ["mongod"]
    args: ["--replSet", "rs0", "--bind_ip_all"]
